--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -139,8 +139,8 @@
 						{%- if router.position_comment %}
 						<tr><th>Position</th><td>{{ router.position_comment }}</td></tr>
 						{%- endif %}
-						{%- if router.hood %}
-						<tr><th>Hood</th><td{%- if router.local %} class="hoodlocal"{%- elif router.v2 %} class="hoodv2"{%- endif %}><a href="{{ url_for('router_list', q='hood:^%s$' % router.hood) }}">{{ router.hood }}</a>
+						{%- if router.hoodname %}
+						<tr><th>Hood</th><td{%- if router.local %} class="hoodlocal"{%- elif router.v2 %} class="hoodv2"{%- endif %}><a href="{{ url_for('router_list', q='hood:^%s$' % router.hoodname) }}">{{ router.hoodname }}</a>
 							{%- if router.community %}
 							({{ router.community }})
 							{%- endif -%}
