router.html: Show hood version next to hood name
Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -140,9 +140,15 @@
 						<tr><th>Position</th><td>{{ router.position_comment }}</td></tr>
 						{%- endif %}
 						{%- if router.hoodname %}
-						<tr><th>Hood</th><td{%- if router.local %} class="hoodlocal"{%- elif router.v2 %} class="hoodv2"{%- endif %}><a href="{{ url_for('router_list', q='hood:^%s$' % router.hoodname) }}">{{ router.hoodname }}</a>
-							{%- if router.community %}
+						<tr><th>Hood</th><td><span{%- if router.local %} class="hoodlocal"{%- elif router.v2 %} class="hoodv2"{%- endif %}><a href="{{ url_for('router_list', q='hood:^%s$' % router.hoodname) }}">{{ router.hoodname }}</a></span>
+							{%- if router.community and router.community != 'franken' %}
 							({{ router.community }})
+							{%- elif router.local %}
+							(local hood)
+							{%- elif router.v2 %}
+							(V2)
+							{%- else %}
+							(V1)
 							{%- endif -%}
 							{%- if router.reset %}
 							<span style="color:#d90000">- Router has lost its position!</span>
