statistics.html: Fix order in hoods table
Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/statistics.html
+++ b/ffmap/web/templates/statistics.html
@@ -252,7 +252,7 @@
 			{%- endif -%}
 			
 			$("#hoodlist").DataTable({
-				"order": [],
+				"order": [[0,'asc']],
 				"paging": false,
 				"info": false,
 				"searching": false,
