gateways: Apply sorting for IP addresses
Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/gws.html
+++ b/ffmap/web/templates/gws.html
@@ -174,7 +174,7 @@
 			});
 			
 			$("#ipv4list").DataTable({
-				"order": [],
+				"order": [[3,'asc']],
 				"paging": false,
 				"info": false,
 				"searching": false,
@@ -188,7 +188,7 @@
 			});
 			
 			$("#ipv6list").DataTable({
-				"order": [],
+				"order": [[3,'asc']],
 				"paging": false,
 				"info": false,
 				"searching": false,
@@ -202,7 +202,7 @@
 			});
 			
 			$("#dhcplist").DataTable({
-				"order": [],
+				"order": [[3,'asc']],
 				"paging": false,
 				"info": false,
 				"searching": false,
