--- a/ffmap/web/templates/gws.html
+++ b/ffmap/web/templates/gws.html
@@ -125,7 +125,11 @@
 							<td class="warning" data-order="{{ ip["name"] }}_{{ ip["vpnif"] }}">{{ ip["vpnif"] }}</td>
 							<td data-order="{{ ip["name"] }}_{{ ip["batif"] }}">{{ ip["batif"] }}</td>
 							<td class="success" data-order="{{ ip["ipv4"]|ipnet2int }}">{{ ip["ipv4"] }}</td>
+							{%- if ip["mac"] %}
 							<td class="stats"><a href="{{ url_for('global_gwstatistics', selectgw='%s' % ip["mac"]|int2shortmac) }}">Stats</a></td>
+							{%- else %}
+							<td class="stats">&nbsp;</td>
+							{%- endif %}
 						</tr>
 						{%- endfor %}
 					</tbody>
@@ -152,7 +156,11 @@
 							<td class="warning" data-order="{{ ip["name"] }}_{{ ip["vpnif"] }}">{{ ip["vpnif"] }}</td>
 							<td data-order="{{ ip["name"] }}_{{ ip["batif"] }}">{{ ip["batif"] }}</td>
 							<td class="success" data-order="{{ ip["ipv6"]|ipnet2int }}">{{ ip["ipv6"] }}</td>
+							{%- if ip["mac"] %}
 							<td class="stats"><a href="{{ url_for('global_gwstatistics', selectgw='%s' % ip["mac"]|int2shortmac) }}">Stats</a></td>
+							{%- else %}
+							<td class="stats">&nbsp;</td>
+							{%- endif %}
 						</tr>
 						{%- endfor %}
 					</tbody>
