router/router_list/user.html: Indicate missing coordinates
This also indicates missing coordinates without a previous reset.

The router detail page shows different messages for both cases
(missing coords and reset). The lists show the "Reset!"
warning in both cases (previously only for real reset).

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -153,6 +153,8 @@
 							{%- endif -%}
 							{%- if router.reset %}
 							<span style="color:#d90000">- Router has lost its position!</span>
+							{%- elif not router.lat and not router.lng %}
+							<span style="color:#d90000">- Router has no position!</span>
 							{%- endif -%}
 						</td></tr>
 						{%- endif %}
